Fix punctuation in disappointment messages

--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
     if (state.score <= 50) {
       options = [
         "NO PASSENGER ALLOWED",
-        "VLADIMIR IS DISAPPOINTED.",
+        "VLADIMIR IS DISAPPOINTED",
         "NEGATIVE ROI DETECTED",
         "HR WANTS A QUICK CHAT",
         "GET OUT THE WAY"
@@ -722,7 +722,7 @@
         "YOU TRULY GET SHIT DONE",
         "YOU MADE VLADIMIR CHUCKLE!",
         "KKR HAS GREAT INTEREST IN YOU",
-        "SEE YOU AT THE TOP"
+        "SEE YOU AT THE TOP",
         "YOU'VE RAISED THE BAR!"
       ];
     } else {
